<resources>
    <string name="app_name">ContactosApp-andres.ruiz</string>
    <string name="textViewUserId">User id</string>
    <string name="textViewFirstName">First Name:</string>
    <string name="textViewLastName">Last Name:</string>
    <string name="textViewPhoneNumber">Phone Number:</string>
    <string name="textViewEmailAddress">Email Address:</string>
    <string name="buttonSave">Save</string>
    <string name="buttonView">View</string>
    <string name="buttonUpdate">Update</string>
    <string name="buttonDelete">Delete</string>
</resources>